# milvus

./: .gitmodules
api/commonpb/: common.pb.go
api/milvuspb/: milvus.pb.go
internal/core/src/: CMakeLists.txt
internal/core/src/pb/: common.pb.cc  common.pb.h  plan.pb.cc  plan.pb.h
internal/core/src/query/: CMakeLists.txt  Expr.h  ExprImpl.h  PlanProto.cpp
internal/core/src/query/visitors/: ExecExprVisitor.cpp  ExtractInfoExprVisitor.cpp  ShowExprVisitor.cpp
internal/core/src/wasm/: CMakeLists.txt  TestWasm.cpp  TestWasmFunction.cpp  WasmFunction.cpp  WasmFunction.h  WasmFunctionManager.cpp  WasmFunctionManager.h
internal/core/src/wasm/test/: CMakeLists.txt  init_gtest.cpp  test_wasm_function_manager.cpp
internal/core/unittest/: CMakeLists.txt  test_expr.cpp  test_plan_proto.cpp  test_wasm.cpp
internal/distributed/proxy/: service.go
internal/distributed/rootcoord/: service.go
internal/distributed/rootcoord/client/: client.go  client_test.go
internal/parser/planparserv2/: parser_visitor.go  plan_parser_v2.go  plan_parser_v2_test.go  show_visitor.go
internal/proto/: common.proto  milvus.proto  plan.proto  root_coord.proto
internal/proto/commonpb/: common.pb.go
internal/proto/milvuspb/: milvus.pb.go
internal/proto/planpb/: plan.pb.go
internal/proto/rootcoordpb/: root_coord.pb.go
internal/proxy/: impl.go  rootcoord_mock_test.go  task.go  task_query.go  task_search.go  task_search_test.go
internal/rootcoord/: create_function_task.go  create_function_task_test.go  drop_function_task.go  get_function_info_task.go  get_function_info_task_test.go  meta_table.go  root_coord.go  task.go  task_test.go  udf.go
internal/types/: types.go
internal/util/mock/: grpc_rootcoord_client.go
